services/kibana/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
namespace: logging
  labels:
    component: elk
    role: kibana
spec:
  selector:
    component: elk
    role: kibana
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5601
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: kibana.internal.carlosedp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 80
